--- a/TODO.txt
+++ b/TODO.txt
@@ -6,7 +6,9 @@ Content Linking:
 * footer links
 
 * copy downloads page content
-* copy external page content
+
+* linkify front page
+* get company logo perms
 
 * gitref content
 
@@ -50,3 +52,5 @@ Functionality:
   * viewing experience
 
 * caching
+
+* 404 page
