--- a/TODO.txt
+++ b/TODO.txt
@@ -15,7 +15,8 @@ Content Linking:
 Functionality:
 
 * asciidoc parsing
-  * pre areas
+  * git-config OPTIONS missing --includes/--no-includes
+  * nested lists (eg. git-config Variables)
 
 * remember current version
 
