--- a/TODO.txt
+++ b/TODO.txt
@@ -41,7 +41,8 @@ Functionality:
   * translations
 
 * Search
-  * search name / description / body
+  * search name / body / views
+    * keep number of views so we can weight results by popularity
   * remove releasenotes from search
   * full search results include highlighting
   * follow link on mouse click
