Asciidoc fixes and debugging help
* more accurate tracking of ancestry for nested sections/blocks
* optional debug output when rendering
* fixes for dlist definitions with multiple/nested blocks
* fix :line regexp to detect H4/H5 level headings

--- a/TODO.txt
+++ b/TODO.txt
@@ -15,8 +15,8 @@ Content Linking:
 Functionality:
 
 * asciidoc parsing
-  * git-config OPTIONS missing --includes/--no-includes
-  * nested lists (eg. git-config Variables)
+  * convert URLs to links
+  * nested dlists (eg. diff.mnemonicprefix in diff-config.txt)
 
 * remember current version
 
