fix some css issues

--- a/TODO.txt
+++ b/TODO.txt
@@ -41,10 +41,11 @@ Functionality:
   * translations
 
 * Search
-  * search name / body / views
-    * keep number of views so we can weight results by popularity
-  * remove releasenotes from search
-  * full search results include highlighting
+  * weighting
+    - weigh porcelain over plumbing
+    - weigh by total views
+  * full search results
+    - include highlighting
   * follow link on mouse click
   * add book content to search
   * add video shownotes to search
