--- a/TODO.txt
+++ b/TODO.txt
@@ -1,16 +1,9 @@
 Content Linking:
-
-* SFC page
-
-* files listing page
-* footer links
-
-* copy downloads page content
-
-* linkify front page
-* get company logo perms
-
-* gitref content
+  * copy downloads page content
+  # linkify front page
+  # get company logo perms
+  * gitref content
+  * SFC donate page?
 
 Functionality:
 
@@ -18,10 +11,7 @@ Functionality:
   * convert URLs to links
   * nested dlists (eg. diff.mnemonicprefix in diff-config.txt)
 
-* remember current version
-
 * current link highlighting
-
 * extra information sidebar
 
 * Version Dropdown
