add session info

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,6 +7,17 @@ Content Linking:
 
 Functionality:
 
+* Detect OS
+  - win/mac/linux/other
+
+* Rotating tagline
+  - fast-version-control
+  - everything-is-local
+  - distributed-even-if-your-workflow-isnt
+  - local-branching-on-the-cheap
+  - not-your-daddys-version-control
+  - distributed-is-the-new-centralized 
+
 * asciidoc parsing
   * convert URLs to links
   * nested dlists (eg. diff.mnemonicprefix in diff-config.txt)
@@ -23,8 +34,6 @@ Functionality:
 * Fullscreen Manpage (or, hide sidebar)
 
 * Highlight sidebar links properly
-
-* Rotating tagline
 
 * Book content
   * pipeline for generating and importing book content
