TODO: asciidoc conversion issues

--- a/TODO.txt
+++ b/TODO.txt
@@ -21,6 +21,8 @@ Functionality:
 * asciidoc parsing
   * convert URLs to links
   * nested dlists (eg. diff.mnemonicprefix in diff-config.txt)
+  * dlist dd with nested ulist with continuations (eg. git-blame -L)
+  * "admonition block" (eg. NOTE at the end of git-blame)
 
 * Version Dropdown
   * highlight current version
