--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 Content Linking:
+
   * copy downloads page content
   # linkify front page
   # get company logo perms
@@ -7,14 +8,14 @@ Content Linking:
 
 Functionality:
 
-* current link highlighting
-* extra information sidebar
-
 * asciidoc parsing
   * convert URLs to links
   * nested dlists (eg. diff.mnemonicprefix in diff-config.txt)
   * dlist dd with nested ulist with continuations (eg. git-blame -L)
   * "admonition block" (eg. NOTE at the end of git-blame)
+
+* current link highlighting
+* extra information sidebar
 
 * Version Dropdown
   * highlight current version
@@ -22,13 +23,18 @@ Functionality:
   * remember version
   * dismiss dropdown when clicking elsewhere
 
-* Fullscreen Manpage (or, hide sidebar)
-
-* Highlight sidebar links properly
-
 * Book content
   * pipeline for generating and importing book content
+  * book search
   * translations
+
+* Sidebar related content
+  - book sections
+  - stackoverflow articles
+  - gitref sections
+  - manpages
+
+--
 
 * Search
   * weighting
@@ -41,9 +47,11 @@ Functionality:
   * add video shownotes to search
   * add stackoverflow to search
 
+* Fullscreen Manpage (or, hide sidebar)
+
 * Videos
   * viewing experience
 
-* caching
+* caching, speed
 
 * 404 page
