linked up downloads area, fix sidebar highlighting

--- a/TODO.txt
+++ b/TODO.txt
@@ -14,8 +14,16 @@ Functionality:
   * dlist dd with nested ulist with continuations (eg. git-blame -L)
   * "admonition block" (eg. NOTE at the end of git-blame)
 
-* current link highlighting
 * extra information sidebar
+
+* Downloads
+  - /download/(mac/win/linux) 
+    - auto download binary (mac,win at least)
+    - show guis
+  - /download/gui/(mac/win/linux)
+    - show guis
+
+* release notes box
 
 * Version Dropdown
   * highlight current version
