todo list updates

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,7 @@
 Content Linking:
 
-  * copy downloads page content
   # linkify front page
   # get company logo perms
-  * gitref content
   * SFC donate page?
 
 Functionality:
@@ -15,6 +13,27 @@ Functionality:
   * "admonition block" (eg. NOTE at the end of git-blame)
 
 * extra information sidebar
+
+* proper version sorter
+
+* About page
+  - cheap branching and merging (vs SVN/Perforce)
+  - everything is local
+  - small and fast (benchmarks vs SVN/Perforce)
+  - staging area / control / late decisions (patch commits)
+  - multiple remotes / workflows
+
+* Documentation
+  - gitref content
+  - try git!
+
+* Developers (under Community)
+  - mailing list (browse/search/api)
+  - IRC (browser-based client)
+  - how to contribute
+  - technical docs
+  - jgit and co
+  - libgit2 and wrappers
 
 * Downloads
   - /download/(mac/win/linux) 
