add version order field for quick version sorting

--- a/TODO.txt
+++ b/TODO.txt
@@ -12,16 +12,9 @@ Functionality:
   * dlist dd with nested ulist with continuations (eg. git-blame -L)
   * "admonition block" (eg. NOTE at the end of git-blame)
 
-* extra information sidebar
-
 * proper version sorter
 
-* About page
-  - cheap branching and merging (vs SVN/Perforce)
-  - everything is local
-  - small and fast (benchmarks vs SVN/Perforce)
-  - staging area / control / late decisions (patch commits)
-  - multiple remotes / workflows
+* release notes box
 
 * Documentation
   - gitref content
@@ -42,8 +35,6 @@ Functionality:
   - /download/gui/(mac/win/linux)
     - show guis
 
-* release notes box
-
 * Version Dropdown
   * highlight current version
   * all versions page
@@ -56,10 +47,19 @@ Functionality:
   * translations
 
 * Sidebar related content
+  - ajaxify(?)
   - book sections
   - stackoverflow articles
   - gitref sections
   - manpages
+
+* About page
+  - cheap branching and merging (vs SVN/Perforce)
+  - everything is local
+  - small and fast (benchmarks vs SVN/Perforce)
+  - staging area / control / late decisions (patch commits)
+  - multiple remotes / workflows
+
 
 --
 
