basic download page functionality - mac/win/lin

--- a/TODO.txt
+++ b/TODO.txt
@@ -12,22 +12,6 @@ Functionality:
   * dlist dd with nested ulist with continuations (eg. git-blame -L)
   * "admonition block" (eg. NOTE at the end of git-blame)
 
-* proper version sorter
-
-* release notes box
-
-* Documentation
-  - gitref content
-  - try git!
-
-* Developers (under Community)
-  - mailing list (browse/search/api)
-  - IRC (browser-based client)
-  - how to contribute
-  - technical docs
-  - jgit and co
-  - libgit2 and wrappers
-
 * Downloads
   - /download/(mac/win/linux) 
     - auto download binary (mac,win at least)
@@ -60,8 +44,24 @@ Functionality:
   - staging area / control / late decisions (patch commits)
   - multiple remotes / workflows
 
+* Developers (under Community)
+  - mailing list (browse/search/api)
+  - IRC (browser-based client)
+  - how to contribute
+  - technical docs
+  - jgit and co
+  - libgit2 and wrappers
+
+
 
 --
+
+* release notes box
+  - needs local cached version of release notes
+
+* Documentation
+  - gitref content
+  - try git!
 
 * Search
   * weighting
