implement ref version dropdown

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,7 @@ Content Linking:
   # linkify front page
   # get company logo perms
   * SFC donate page?
+  * change win download repo to msys when they start uploading
 
 Functionality:
 
@@ -13,10 +14,7 @@ Functionality:
   * "admonition block" (eg. NOTE at the end of git-blame)
 
 * Downloads
-  - /download/(mac/win/linux) 
-    - show guis
   - /download/gui/(mac/win/linux)
-    - show guis
 
 * Version Dropdown
   * highlight current version
@@ -52,7 +50,6 @@ Functionality:
   - libgit2 and wrappers
 
 
-
 --
 
 * release notes box
@@ -81,3 +78,7 @@ Functionality:
 * caching, speed
 
 * 404 page
+
+--
+
+* db-ify GUIs?
