initial book integration working
* rake task posts updated content to the site
* creates/updates entries
* indexes entries for search
* displays toc and sections from db content

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,7 @@ Content Linking:
   # get company logo perms
   * SFC donate page?
   * change win download repo to msys when they start uploading
+  * page titles filled out
 
 Functionality:
 
@@ -12,9 +13,6 @@ Functionality:
   * nested dlists (eg. diff.mnemonicprefix in diff-config.txt)
   * dlist dd with nested ulist with continuations (eg. git-blame -L)
   * "admonition block" (eg. NOTE at the end of git-blame)
-
-* Downloads
-  - /download/gui/(mac/win/linux)
 
 * Version Dropdown
   * highlight current version
