--- a/TODO.txt
+++ b/TODO.txt
@@ -14,16 +14,10 @@ Functionality:
   * dlist dd with nested ulist with continuations (eg. git-blame -L)
   * "admonition block" (eg. NOTE at the end of git-blame)
 
-* Version Dropdown
-  * highlight current version
-  * all versions page
-  * remember version
-  * dismiss dropdown when clicking elsewhere
-
 * Book content
-  * pipeline for generating and importing book content
-  * book search
-  * translations
+  * fix encoding issues
+  * translations menu (percent complete?)
+  * errata / commenting?
 
 * Sidebar related content
   - ajaxify(?)
@@ -49,6 +43,12 @@ Functionality:
 
 
 --
+
+* Version Dropdown
+  * all versions page
+  * remember version
+  * dismiss dropdown when clicking elsewhere
+
 
 * release notes box
   - needs local cached version of release notes
