fix about page refresh

--- a/TODO.txt
+++ b/TODO.txt
@@ -27,11 +27,8 @@ Functionality:
   - manpages
 
 * About page
-  - cheap branching and merging (vs SVN/Perforce)
-  - everything is local
-  - small and fast (benchmarks vs SVN/Perforce)
-  - staging area / control / late decisions (patch commits)
-  - multiple remotes / workflows
+  - permalink
+  - content refresh
 
 * Developers (under Community)
   - mailing list (browse/search/api)
