--- a/TODO.txt
+++ b/TODO.txt
@@ -1,12 +1,4 @@
-Content Linking:
-
-  # linkify front page
-  # get company logo perms
-  * SFC donate page?
-  * change win download repo to msys when they start uploading
-  * page titles filled out
-
-Functionality:
+Initial Launch (3.0):
 
 * asciidoc parsing
   * convert URLs to links
@@ -38,14 +30,22 @@ Functionality:
   - jgit and co
   - libgit2 and wrappers
 
+* Misc
+  # linkify front page
+  # get company logo perms
+  - SFC donate page?
+  - change win download repo to msys when they start uploading
+  - page titles filled out
+  - rebase history before launch
 
 --
+
+3.1 Launch:
 
 * Version Dropdown
   * all versions page
   * remember version
   * dismiss dropdown when clicking elsewhere
-
 
 * release notes box
   - needs local cached version of release notes
@@ -65,8 +65,6 @@ Functionality:
   * add video shownotes to search
   * add stackoverflow to search
 
-* Fullscreen Manpage (or, hide sidebar)
-
 * Videos
   * viewing experience
 
@@ -76,4 +74,9 @@ Functionality:
 
 --
 
+Maybes:
+
 * db-ify GUIs?
+
+* Fullscreen Manpage (or, hide sidebar)
+
