utf8 capable permalinks

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,12 +7,15 @@ Initial Launch (3.0):
   * "admonition block" (eg. NOTE at the end of git-blame)
 
 * Book content
-  * fix encoding issues
+  * index all languages
+  * turn prev/next links into working links
   * translations menu (percent complete?)
+  * links to subsections
   * errata / commenting?
 
 * Sidebar related content
   - ajaxify(?)
+  - related table
   - book sections
   - stackoverflow articles
   - gitref sections
@@ -64,6 +67,7 @@ Initial Launch (3.0):
   * add book content to search
   * add video shownotes to search
   * add stackoverflow to search
+  * only search your locale plus english
 
 * Videos
   * viewing experience
