--- a/TODO.txt
+++ b/TODO.txt
@@ -11,6 +11,8 @@ Initial Launch (3.0):
   * turn prev/next links into working links
   * translations menu (percent complete?)
   * links to subsections
+  * old urls work
+  * blog posts moved over
   * errata / commenting?
 
 * Sidebar related content
@@ -40,6 +42,7 @@ Initial Launch (3.0):
   - change win download repo to msys when they start uploading
   - page titles filled out
   - rebase history before launch
+  - reindex command - drops index and re-does everything
 
 --
 
