--- a/TODO.txt
+++ b/TODO.txt
@@ -7,9 +7,7 @@ Initial Launch (3.0):
   * "admonition block" (eg. NOTE at the end of git-blame)
 
 * Book content
-  * index all languages
   * turn prev/next links into working links
-  * translations menu (percent complete?)
   * links to subsections
   * old urls work
   * blog posts moved over
@@ -41,12 +39,17 @@ Initial Launch (3.0):
   - SFC donate page?
   - change win download repo to msys when they start uploading
   - page titles filled out
+
   - rebase history before launch
   - reindex command - drops index and re-does everything
+  * generate all languages
 
 --
 
 3.1 Launch:
+
+* Book
+  - incremental updates (get hashes of all pages, only update changed ones)
 
 * Version Dropdown
   * all versions page
