link book on doc main page

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,6 +7,7 @@ Initial Launch (3.0):
   * "admonition block" (eg. NOTE at the end of git-blame)
 
 * Book content
+  * line wrapping on code blocks
   * old urls work
   * blog posts moved over
   * errata / commenting?
