progit.org style urls work now

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,10 +7,11 @@ Initial Launch (3.0):
   * "admonition block" (eg. NOTE at the end of git-blame)
 
 * Book content
-  * line wrapping on code blocks
-  * old urls work
   * blog posts moved over
-  * errata / commenting?
+
+* Search
+  * full search results
+    - include highlighting
 
 * Sidebar related content
   - ajaxify(?)
@@ -49,6 +50,7 @@ Initial Launch (3.0):
 
 * Book
   - incremental updates (get hashes of all pages, only update changed ones)
+  * errata / commenting?
 
 * Version Dropdown
   * all versions page
@@ -66,8 +68,6 @@ Initial Launch (3.0):
   * weighting
     - weigh porcelain over plumbing
     - weigh by total views
-  * full search results
-    - include highlighting
   * follow link on mouse click
   * add book content to search
   * add video shownotes to search
