--- a/TODO.txt
+++ b/TODO.txt
@@ -6,6 +6,9 @@ Initial Launch (3.0):
   * dlist dd with nested ulist with continuations (eg. git-blame -L)
   * "admonition block" (eg. NOTE at the end of git-blame)
 
+* Book content
+  * commands.html
+
 * Search
   * full search results
     - include highlighting
@@ -40,6 +43,7 @@ Initial Launch (3.0):
   - rebase history before launch
   - reindex command - drops index and re-does everything
   * generate all languages
+  - progit.org -> git-scm.com/book
 
 --
 
