full search results page hooked up

--- a/TODO.txt
+++ b/TODO.txt
@@ -9,10 +9,6 @@ Initial Launch (3.0):
 * Book content
   * commands.html
 
-* Search
-  * full search results
-    - include highlighting
-
 * Sidebar related content
   - ajaxify(?)
   - related table
@@ -74,6 +70,7 @@ Initial Launch (3.0):
   * add video shownotes to search
   * add stackoverflow to search
   * only search your locale plus english
+  * search internal pages, too (blog, etc)
 
 * Videos
   * viewing experience
