add related material sidebar - local fill only

--- a/TODO.txt
+++ b/TODO.txt
@@ -10,11 +10,7 @@ Initial Launch (3.0):
   * commands.html
 
 * Sidebar related content
-  - ajaxify(?)
-  - related table
   - book sections
-  - stackoverflow articles
-  - gitref sections
   - manpages
 
 * About page
@@ -35,6 +31,7 @@ Initial Launch (3.0):
   - SFC donate page?
   - change win download repo to msys when they start uploading
   - page titles filled out
+  - redirect whygitisbetter to about page
 
   - rebase history before launch
   - reindex command - drops index and re-does everything
@@ -48,6 +45,11 @@ Initial Launch (3.0):
 * Book
   - incremental updates (get hashes of all pages, only update changed ones)
   * errata / commenting?
+
+* Sidebar related content
+  - ajaxify(?)
+  - stackoverflow articles
+  - gitref sections
 
 * Version Dropdown
   * all versions page
