--- a/TODO.txt
+++ b/TODO.txt
@@ -7,7 +7,8 @@ Initial Launch (3.0):
   * "admonition block" (eg. NOTE at the end of git-blame)
 
 * Book content
-  * commands.html
+  - remote fill
+  - commands.html
 
 * Sidebar related content
   - book sections
