--- a/TODO.txt
+++ b/TODO.txt
@@ -6,13 +6,6 @@ Initial Launch (3.0):
   * dlist dd with nested ulist with continuations (eg. git-blame -L)
   * "admonition block" (eg. NOTE at the end of git-blame)
 
-* Book content
-  - remote fill
-
-* Sidebar related content
-  - book sections
-  - manpages
-
 * About page
   - permalink
   - content refresh
@@ -25,13 +18,20 @@ Initial Launch (3.0):
   - jgit and co
   - libgit2 and wrappers
 
+* Videos
+  * viewing experience
+  * add transcription to search?
+  * add to related items
+
 * Misc
   # linkify front page
   # get company logo perms
+  - external link updates (http://sixrevisions.com/resources/git-tutorials-beginners/)
   - SFC donate page?
   - change win download repo to msys when they start uploading
   - page titles filled out
   - redirect whygitisbetter to about page
+  - link to git for windows page
 
   - rebase history before launch
   - reindex command - drops index and re-does everything
@@ -73,9 +73,6 @@ Initial Launch (3.0):
   * add stackoverflow to search
   * only search your locale plus english
   * search internal pages, too (blog, etc)
-
-* Videos
-  * viewing experience
 
 * caching, speed
 
