do not wrap text if font falls back

--- a/TODO.txt
+++ b/TODO.txt
@@ -25,7 +25,7 @@ Initial Launch (3.0):
 
 * Misc
   # linkify front page
-  # get company logo perms
+  # get company logo perms (twitter)
   - external link updates (http://sixrevisions.com/resources/git-tutorials-beginners/)
   - SFC donate page?
   - change win download repo to msys when they start uploading
