started content refresh on about section

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,8 +7,10 @@ Initial Launch (3.0):
   * "admonition block" (eg. NOTE at the end of git-blame)
 
 * About page
-  - permalink
-  - content refresh
+  # content refresh
+
+* Downloads
+  - improve getting started with git section
 
 * Developers (under Community)
   - mailing list (browse/search/api)
@@ -19,9 +21,9 @@ Initial Launch (3.0):
   - libgit2 and wrappers
 
 * Videos
-  * viewing experience
-  * add transcription to search?
-  * add to related items
+  - viewing experience
+  - add transcription to search?
+  - add to related items
 
 * Misc
   # linkify front page
