--- a/TODO.txt
+++ b/TODO.txt
@@ -28,6 +28,7 @@ Initial Launch (3.0):
 * Misc
   # linkify front page
   # get company logo perms (twitter)
+  - svn crash course / map existing paths
   - external link updates (http://sixrevisions.com/resources/git-tutorials-beginners/)
   - SFC donate page?
   - change win download repo to msys when they start uploading
