getting close - add mod-tests to precompile list

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,18 +7,7 @@ Initial Launch (3.0):
   * "admonition block" (eg. NOTE at the end of git-blame)
 
 * About page
-  # content refresh
-
-* Downloads
-  - improve getting started with git section
-
-* Developers (under Community)
-  - mailing list (browse/search/api)
-  - IRC (browser-based client)
-  - how to contribute
-  - technical docs
-  - jgit and co
-  - libgit2 and wrappers
+  # content refresh (benchmarks, info assurance reword?)
 
 * Videos
   - viewing experience
@@ -77,6 +66,7 @@ Initial Launch (3.0):
   * only search your locale plus english
   * search internal pages, too (blog, etc)
 
+
 * caching, speed
 
 * 404 page
@@ -88,4 +78,12 @@ Maybes:
 * db-ify GUIs?
 
 * Fullscreen Manpage (or, hide sidebar)
+
+* Developers? (under Community)
+  - mailing list (browse/search/api)
+  - IRC (browser-based client)
+  - how to contribute
+  - technical docs
+  - jgit and co
+  - libgit2 and wrappers
 
