--- a/TODO.txt
+++ b/TODO.txt
@@ -14,6 +14,9 @@ Initial Launch (3.0):
   - add transcription to search?
   - add to related items
 
+* release notes box
+  - needs local cached version of release notes
+
 * Misc
   # linkify front page
   # get company logo perms (twitter)
@@ -24,11 +27,13 @@ Initial Launch (3.0):
   - page titles filled out
   - redirect whygitisbetter to about page
   - link to git for windows page
+  - user-manual not present
 
   - rebase history before launch
   - reindex command - drops index and re-does everything
   * generate all languages
   - progit.org -> git-scm.com/book
+  - regenerate all reference pages: /git-fetch/1.7.3.2 looks wrong
 
 --
 
@@ -47,9 +52,6 @@ Initial Launch (3.0):
   * all versions page
   * remember version
   * dismiss dropdown when clicking elsewhere
-
-* release notes box
-  - needs local cached version of release notes
 
 * Documentation
   - gitref content
