move release notes stuff to 3.1

--- a/TODO.txt
+++ b/TODO.txt
@@ -11,15 +11,11 @@ Initial Launch (3.0):
 
 * Videos
   - viewing experience
-  - add transcription to search?
   - add to related items
-
-* release notes box
-  - needs local cached version of release notes
 
 * Misc
   # linkify front page
-  # get company logo perms (twitter)
+  # get company logo perms (microsoft)
   - svn crash course / map existing paths
   - external link updates (http://sixrevisions.com/resources/git-tutorials-beginners/)
   - SFC donate page?
@@ -38,6 +34,12 @@ Initial Launch (3.0):
 --
 
 3.1 Launch:
+
+* Videos
+  - add transcription to search
+
+* release notes box
+  - needs local cached version of release notes
 
 * Book
   - incremental updates (get hashes of all pages, only update changed ones)
