--- a/TODO.txt
+++ b/TODO.txt
@@ -16,18 +16,19 @@ Initial Launch (3.0):
 * Misc
   # get company logo perms (microsoft)
   - external link updates (http://sixrevisions.com/resources/git-tutorials-beginners/)
-  - SFC donate page?
-  - change win download repo to msys when they start uploading
   - page titles filled out
-  - redirect whygitisbetter to about page
   - link to git for windows page
   - user-manual not present
 
+  - redirect whygitisbetter to about page
+  - ensure crons are running (doc update and version update)
   - rebase history before launch
   - reindex command - drops index and re-does everything
   * generate all languages
   - progit.org -> git-scm.com/book
   - regenerate all reference pages: /git-fetch/1.7.3.2 looks wrong
+
+  - change win download repo to msys when they start uploading
 
 --
 
