--- a/TODO.txt
+++ b/TODO.txt
@@ -7,7 +7,7 @@ Initial Launch (3.0):
   * "admonition block" (eg. NOTE at the end of git-blame)
 
 * About page
-  # content refresh (benchmarks, info assurance reword?)
+  # content refresh (info assurance reword?)
 
 * Videos
   - viewing experience
