--- a/TODO.txt
+++ b/TODO.txt
@@ -6,17 +6,25 @@ Initial Launch (3.0):
   * dlist dd with nested ulist with continuations (eg. git-blame -L)
   * "admonition block" (eg. NOTE at the end of git-blame)
 
+* Speed
+  - profile and cache
+
 * Misc
   # get company logo perms (microsoft)
 
-  - user-manual not present
-  - ensure crons are running (doc update and version update)
-  - rebase history before launch
+  - rebase history
+
   - reindex command - drops index and re-does everything
-  * generate all languages
-  - regenerate all reference pages: /git-fetch/1.7.3.2 looks wrong
-  - progit.org -> git-scm.com/book
-  - redirect whygitisbetter to about page
+  - generate all book languages
+  - regenerate all reference pages
+    - /git-fetch/1.7.3.2 looks wrong
+    - user-manual not present
+
+  - blog post
+
+* Switch
+  - DNS: redirect whygitisbetter
+  - DNS: redirect progit.org
 
   - change win download repo to msys when they start uploading
 
@@ -60,11 +68,6 @@ Initial Launch (3.0):
   * add stackoverflow to search
   * only search your locale plus english
   * search internal pages, too (blog, etc)
-
-
-* caching, speed
-
-* 404 page
 
 --
 
