oops - windows not win

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,13 +6,20 @@ Initial Launch (3.0):
   * dlist dd with nested ulist with continuations (eg. git-blame -L)
   * "admonition block" (eg. NOTE at the end of git-blame)
 
+* Search improvements
+  - "git add"
+  - backspacing
+  - enter partial search
+
+* Test Windows browser test
+
 * Speed
   - profile and cache
 
 * Misc
   # get company logo perms (microsoft)
 
-  - rebase history
+  - book.git-scm.com (redirect all the pages to Pro Git)
 
   - reindex command - drops index and re-does everything
   - generate all book languages
@@ -25,6 +32,7 @@ Initial Launch (3.0):
 * Switch
   - DNS: redirect whygitisbetter
   - DNS: redirect progit.org
+  - DNS: redirect git-scm.com
 
   - change win download repo to msys when they start uploading
 
