redirect community book urls

--- a/TODO.txt
+++ b/TODO.txt
@@ -11,23 +11,17 @@ Initial Launch (3.0):
   - backspacing
   - enter partial search
 
-* Test Windows browser test
-
 * Speed
   - profile and cache
 
 * Misc
-  # get company logo perms (microsoft)
-
-  - book.git-scm.com (redirect all the pages to Pro Git)
-
+  # get company logo perms (microsoft/blizzard) (update blog post)
+ 
   - reindex command - drops index and re-does everything
   - generate all book languages
   - regenerate all reference pages
     - /git-fetch/1.7.3.2 looks wrong
     - user-manual not present
-
-  - blog post
 
 * Switch
   - DNS: redirect whygitisbetter
