--- a/TODO.txt
+++ b/TODO.txt
@@ -11,6 +11,9 @@ Initial Launch (3.0):
   - backspacing
   - enter partial search
 
+* Videos
+  - viewing experience
+
 * Speed
   - profile and cache
 
@@ -35,9 +38,8 @@ Initial Launch (3.0):
 3.1 Launch:
 
 * Videos
-  - viewing experience
-  - add to related items
   - add transcription to search
+  - add to related items
 
 * release notes box
   - needs local cached version of release notes
