change the id of book sections

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,11 +6,7 @@ Initial Launch (3.0):
   * dlist dd with nested ulist with continuations (eg. git-blame -L)
   * "admonition block" (eg. NOTE at the end of git-blame)
 
-* Search improvements
-  - "git add"
-
 * Misc
-  - reindex command - drops index and re-does everything
   - regenerate all reference pages
     - /git-fetch/1.7.3.2 looks wrong
     - user-manual not present
@@ -25,6 +21,9 @@ Initial Launch (3.0):
 --
 
 3.1 Launch:
+
+* Misc
+  - reindex command - drops index and re-does everything
 
 * Videos
   - add transcription to search
