remember to do the license

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 3.1 Launch:
 
+* add MIT/CC license link to footer
+
 * asciidoc parsing
   * convert URLs to links
   * nested dlists (eg. diff.mnemonicprefix in diff-config.txt)
