grammar fix: apostrofly

--- a/app/views/blog/progit/2010-08-25-notes.markdown
+++ b/app/views/blog/progit/2010-08-25-notes.markdown
@@ -10,7 +10,7 @@ SHA since that one.  However, that means that in order to amend the commit
 in any way, for instance to add some comments on something or even sign off
 on a commit, you have to change the SHA of the commit itself.
 
-Wouldn't it be nice if you could add data to a commit without changing it's
+Wouldn't it be nice if you could add data to a commit without changing its
 SHA?  If only there existed an external mechanism to attach data to a commit
 without modifying the commit message itself.  Happy day!  It turns out there
 exists just such a feature in newer versions of Git!  As we can see from the
