xrefs all seem to work

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,14 @@
 PG2:
 
- * redirect first edition URLs to second edition (?)
+ * redirect first edition URLs to second edition when they exist (?)
+ * redirect any book URL without a 'v' to a 'v'
  * restrict search to second edition (?)
+ * link ebooks to show page
+ * translation page?
+
+
+
+
 
 3.1 Launch:
 
