link to live ebooks and new progit2 repo

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,14 +1,10 @@
 PG2:
 
- * redirect first edition URLs to second edition when they exist (?)
- * redirect any book URL without a 'v' to a 'v'
- * restrict search to second edition (?)
  * link ebooks to show page
+
  * translation page?
-
-
-
-
+ * update percent_complete and urls on new builds
+ * seperate link for translation sources
 
 3.1 Launch:
 
