fallback to v1 for some slugs

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,11 @@
 PG2:
 
  * link ebooks to show page
-
+ * easier to find the epub/mobi/pdf?
  * translation page?
  * update percent_complete and urls on new builds
  * seperate link for translation sources
+ * show that newer content is available for missed slugs (fallback to v1)
 
 3.1 Launch:
 
