Fix typo in Replace Kicker post.

--- a/app/views/blog/posts/2010-03-17-replace.markdown
+++ b/app/views/blog/posts/2010-03-17-replace.markdown
@@ -18,7 +18,7 @@ in data mining.  You can graft one history onto the other by `replace`ing
 the earliest commit in the new line with the latest commit on the older one.  This
 is nice because it means that you don't actually have to rewrite every commit
 in the new history, as you would normally have to do to join them together
-(because the parentage effects the SHAs).
+(because the parentage affects the SHAs).
 
 Let's try this out.  Let's take an existing repository, split it into two
 repositories, one recent and one historical, and then we'll see how we can
