fixed reversed references in bundle create description

--- a/app/views/blog/posts/2010-03-10-bundles.markdown
+++ b/app/views/blog/posts/2010-03-10-bundles.markdown
@@ -69,7 +69,7 @@ via a bundle on a usb stick or email.
 
 First we need to determine the range of commits we want to include in the bundle.
 The easiest way would have been to drop a branch when we started, so we could
-say `start_branch..master` or `master ^start_branch`, but if we didn't we can
+say `master..start_branch` or `master ^start_branch`, but if we didn't we can
 just list the starting SHA explicitly:
 
 	$ git log --oneline master ^9a466c5
