--- a/app/views/blog/posts/2010-03-08-rerere.markdown
+++ b/app/views/blog/posts/2010-03-08-rerere.markdown
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Rerere Your Boat...
+author:
 ---
 
 One of the things I didn't touch on at all in the book is the `git rerere`
