--- a/app/views/blog/posts/2010-03-10-bundles.markdown
+++ b/app/views/blog/posts/2010-03-10-bundles.markdown
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Git's Little Bundle of Joy
+author:
 ---
 
 The scenario is thus: you need to sneakernet a `git push`.  Maybe your network
