--- a/app/views/blog/posts/2010-03-17-replace.markdown
+++ b/app/views/blog/posts/2010-03-17-replace.markdown
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Replace Kicker
+author:
 ---
 
 In another of my series of "seemingly hidden Git features", I would like to
