--- a/app/views/blog/posts/2010-06-09-pro-git-zh.markdown
+++ b/app/views/blog/posts/2010-06-09-pro-git-zh.markdown
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Pro Git 简体中文版
+author:
 ---
 
 The amazing <a href="http://chunzi.me/">Chunzi</a>, in addition to translating 
