--- a/app/views/blog/posts/2010-03-08-rerere.markdown
+++ b/app/views/blog/posts/2010-03-08-rerere.markdown
@@ -7,7 +7,7 @@ author:
 One of the things I didn't touch on at all in the book is the `git rerere`
 functionality.  This also came up recently
 during one of my trainings, and I realize that a lot of people probably could
-use this, so I wanted to let you all now about it.
+use this, so I wanted to let you all know about it.
 
 The <a href="http://ftp.sunet.se/pub/Linux/kernel.org/software/scm/git/docs/git-rerere.html">`git rerere`</a>
 functionality is a bit of a hidden feature (Git actually has
